--- a/appspec.yaml
+++ b/appspec.yaml
@@ -5,5 +5,5 @@ Resources:
       Properties:
         TaskDefinition: <TASK_DEFINITION>
         LoadBalancerInfo:
-          ContainerName: "nodejs-hello-world"
+          ContainerName: "pras-nodejs-hello-world"
           ContainerPort: 8080
