--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.17.1",
-      "mysql": "^2.18.1"
+      "express": "^4.17.1"
     },
     "description": ""
   }
