--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "pras-nodejs-hello-world",
+  "name": "pras-nodejs-container-project",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://git-codecommit.us-west-2.amazonaws.com/v1/repos/pras-nodejs-hello-world"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "express": "^4.18.2"
   },
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
